--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <!--<td><img src="https://m.media-amazon.com/images/M/MV5BZmJlZDE1NzMtMjRhYi00NTZkLTk4ODAtMzExMzkwMDgxZTdmXkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_UY268_CR88,0,182,268_AL_.jpg" alt="Bender"></td>-->
-      <td><img src="Images/Portrait.png" alt="Bender"></td>
+      <td><img src="images/Portrait.PNG" alt="Bender"></td>
       <td>
         <h1>Dave Chung</h1>
         <p>Software Development <em>Manager</em></p>
