--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!--<td><img src="https://m.media-amazon.com/images/M/MV5BZmJlZDE1NzMtMjRhYi00NTZkLTk4ODAtMzExMzkwMDgxZTdmXkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_UY268_CR88,0,182,268_AL_.jpg" alt="Bender"></td>-->
       <td><img src="images/Portrait.PNG" alt="Bender"></td>
       <td>
-        <h1>Dave Chung</h1>
+        <h1>Dave</h1>
         <p>Software Development <em>Manager</em></p>
         <p>Currently looking</p>
       </td>
@@ -33,12 +33,12 @@
       <tr>
         <td>2015/10 – 2019/02</td>
         <td>SOFTWARE DEV MANAGER</td>
-        <td>KPMG LLP</td>
+
       </tr>
       <tr>
         <td>2002/05- 2015/10</td>
         <td>Software Developer</td>
-        <td>KPMG LLP</td>
+
       </tr>
 
     </tbody>
